# rc

./: .gitignore  CMakeLists.txt  README.md
res/: LICENSE  godot  lisao.txt
